--- a/.github/workflows/add-labels.yaml
+++ b/.github/workflows/add-labels.yaml
@@ -5,10 +5,11 @@ on:
       - reopened
       - opened
 jobs:
-  triage_issues:
+  label_issues:
     runs-on: ubuntu-latest
     steps:
       - name: Label issues
         uses: andymckay/labeler@1.0.2
         with:
           add-labels: 'triage'
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
