--- a/.github/workflows/add-labels.yaml
+++ b/.github/workflows/add-labels.yaml
@@ -11,5 +11,5 @@ jobs:
       - name: Label issues
         uses: andymckay/labeler@1.0.2
         with:
-          add-labels: 'triage'
+          add-labels: 'triage, help-wanted'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
