--- a/.github/workflows/move-card.yaml
+++ b/.github/workflows/move-card.yaml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - uses: alex-page/github-project-automation-plus@v0.3.0
         with:
-          project: apm-org-board
+          project: apm-user-board
           column: c2
           repo-token: ${{ secrets.GITHUB_TOKEN }}
