--- a/.github/workflows/move-card.yaml
+++ b/.github/workflows/move-card.yaml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - uses: alex-page/github-project-automation-plus@v0.3.0
         with:
-          project: apm-user-board
+          project: apm-user-pub-repo-board
           column: c2
-          repo-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-#           repo-token: ${{ secrets.GITHUB_TOKEN }}
+#           repo-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
