--- a/.github/workflows/remove-labels.yaml
+++ b/.github/workflows/remove-labels.yaml
@@ -13,5 +13,5 @@ jobs:
       - name: remove labels
         uses: andymckay/labeler@master
         with:
-          remove-labels: "needs-review"
+          remove-labels: "bug"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
