--- a/.github/workflows/remove-labels.yaml
+++ b/.github/workflows/remove-labels.yaml
@@ -7,11 +7,12 @@ on:
 #       - converted
 jobs:
   remove_labels:
-    if: github.event.project_card.column_id == '13186353'
+#     if: github.event.project_card.column_id == '13186353'
     runs-on: ubuntu-latest
     steps:
-      - name: remove labels
-        uses: andymckay/labeler@master
-        with:
-          remove-labels: "bug"
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+#       - name: remove labels
+#         uses: andymckay/labeler@master
+#         with:
+#           remove-labels: "bug"
+#           repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - run: echo yey
