--- a/.github/workflows/remove-labels.yaml
+++ b/.github/workflows/remove-labels.yaml
@@ -1,10 +1,13 @@
 name: Remove labels
 on:
-  project_card:
+#   project_card:
+#     types:
+#       - moved
+#       - created
+#       - converted
+  issues:
     types:
-      - moved
-      - created
-      - converted
+      - labeled
 jobs:
   remove_labels:
 #     if: github.event.project_card.column_id == '13186353'
